Switch to jRuby 9 and jetty application server